# app/Models/TrSppdPenginapan.php
@@ -53,4 +53,11 @@ class TrSppdPenginapan extends Model
             'participant_id'
         );
     }
+
+    public function attachments()
+    {
+        return $this->hasMany(TrAttachment::class, 'reference_id')
+            ->where('category', 'accommodation')
+            ->where('module', 'realisasi');
+    }
 }
